# terminal_file_manager

./: Cargo.toml  README.md
src/: clear.rs  context_menu.rs  double_click_fixation.rs  enter.rs  keyboard_events.rs  lib.rs  main.rs  target_directory.rs
test_folder/else_folder/: 14221.txt
test_folder/else_folder/9/: qwqrwqr.txt
test_folder/folder/iner_folder/: finish.txt
