[package]
name = "terminal_file_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.28"
futures-timer = "3.0.2"
tokio = { version = "1.33.0", features = ["full"] }
chrono = {version = "0.4.31", features = ["clock"]}